--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ nav {
 .topline {
     display: block;
     position: relative;
-    font-size: 35px;
+    font-size: 2.2em;
     letter-spacing: 5px;
     color: #36454F;
 }
@@ -159,7 +159,7 @@ nav {
 .topline::after {
     position: absolute;
     content: "";
-    height: 4px;
+    height: 3px;
     width: 45px;
     bottom: 10px;
     background-color: #579BB1;
@@ -167,7 +167,7 @@ nav {
 
 h1 {
     display: block;
-    font-size: 5em;
+    font-size: 3em;
     font-weight: 800;
     color: #36454F;
     width: 100%;
@@ -268,8 +268,11 @@ p {
     position: relative;
     height: 90%;
     width: calc(130% - 80px);
-    top: -100px;
-    right: 50px;
+    top: -150px;
+}
+
+.imgbox .me {
+    width: 100%;
 }
 
 .imgbox #splash {
@@ -298,19 +301,19 @@ animation: animate 4s linear infinite;
 .about::before {
     position: absolute;
     content: '';
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
     border-radius: 50%;
-    left: 60%;
-    top: 115%;
+    left: 30%;
+    top: 120%;
     background: linear-gradient(45deg, #F99417, #ffb800);
     animation: object4 6s linear infinite;
 }
 
 @keyframes object4 {
     50%{
-        left: 60%;
-        top: 110%;
+        left: 30%;
+        top: 115%;
         rotate: 180deg;
     }
 }
@@ -321,16 +324,16 @@ animation: animate 4s linear infinite;
     height: 250px;
     width: 250px;
     border-radius: 50%;
-    left: 39%;
-    top: 212%;
+    left: 45%;
+    top: 220%;
     background: linear-gradient(45deg, #F99417, #ffb800);
     animation: object3 6s linear infinite;
 }
 
 @keyframes object3 {
     50%{
-        left: 42%;
-        top: 212%;
+        left: 47%;
+        top: 220%;
         rotate: 180deg;
     }
 }
@@ -339,7 +342,7 @@ animation: animate 4s linear infinite;
     color: #36454F;
     background-color: transparent;
     border: none;
-    font-size: 75px;
+    font-size: 60px;
     display: flex;
 }
 
@@ -361,43 +364,43 @@ animation: animate 4s linear infinite;
 }
 
 .aa {
-    top: 150%;
+    top: 161%;
     left: 60%;
     position: absolute;
 }
 
 .ab {
-    top: 150%;
+    top: 161%;
     left: 63%;
     position: absolute;
 }
 
 .ao {
-    top: 150%;
+    top: 161%;
     left: 65.5%;
     position: absolute;
 }
 
 .au {
-    top: 150%;
+    top: 161%;
     left: 68%;
     position: absolute;
 }
 
 .at {
-    top: 150%;
+    top: 161%;
     left: 70.5%;
     position: absolute;
 }
 
 .am {
-    top: 150%;
+    top: 161%;
     left: 74%;
     position: absolute;
 }
 
 .ae {
-    top: 150%;
+    top: 161%;
     left: 77.5%;
     position: absolute;
 }
@@ -416,11 +419,11 @@ animation: animate 4s linear infinite;
 }
 
 .about p {
-    margin-left: 52%;
-    width: 35%;
-    padding: 20px;
+    margin-left: 51%;
+    width: 38%;
+    padding: 20px 0px;
     text-align: justify;
-    margin-top: -20%;
+    margin-top: -23%;
 }
 
 .about p a {
@@ -477,44 +480,44 @@ animation: animate 4s linear infinite;
 }
 
 .ss1 {
-    top: 235%;
-    left: 10%;
+    top: 255%;
+    left: 13%;
     position: absolute;
 }
 
 .sk {
-    top: 235%;
-    left: 12.5%;
+    top: 255%;
+    left: 15.5%;
     position: absolute;
 }
 
 .si {
-    top: 235%;
-    left: 15%;
-    position: absolute;
-}
-
-.sl1 {
-    top: 235%;
-    left: 16.5%;
-    position: absolute;
-}
-
-.sl2 {
-    top: 235%;
+    top: 255%;
     left: 18%;
     position: absolute;
 }
 
+.sl1 {
+    top: 255%;
+    left: 19.5%;
+    position: absolute;
+}
+
+.sl2 {
+    top: 255%;
+    left: 21%;
+    position: absolute;
+}
+
 .ss2 {
-    top: 235%;
-    left: 19.2%;
+    top: 255%;
+    left: 22.3%;
     position: absolute;
 }
 
 .hoverr {
-    top: 309%;
-    left: 26.8%;
+    top: 318%;
+    left: 25.8%;
     position: absolute;
     padding: 5px;
     border: none;
@@ -527,8 +530,7 @@ animation: animate 4s linear infinite;
 
 @keyframes objecth {
     50%{
-        left: 27.3%;
-        top: 309%;
+        left: 26.3%;
     }
 }
 
@@ -538,16 +540,16 @@ animation: animate 4s linear infinite;
     height: 200px;
     width: 200px;
     border-radius: 50%;
-    left: 15%;
-    top: 315%;
+    left: 55%;
+    top: 325%;
     background: linear-gradient(45deg, #F99417, #ffb800);
     animation: object5 6s linear infinite;
 }
 
 @keyframes object5 {
     50%{
-        left: 15%;
-        top: 320%;
+        left: 55%;
+        top: 330%;
         rotate: 180deg;
     }
 }
@@ -721,31 +723,31 @@ animation: animate 4s linear infinite;
 }
 
 .ww {
-    top: 330%;
+    top: 350%;
     left: 43.4%;
     position: absolute;
 }
 
 .wo {
-    top: 330%;
+    top: 350%;
     left: 47%;
     position: absolute;
 }
 
 .wr {
-    top: 330%;
+    top: 350%;
     left: 49.5%;
     position: absolute;
 }
 
 .wk {
-    top: 330%;
+    top: 350%;
     left: 51.4%;
     position: absolute;
 }
 
 .ws {
-    top: 330%;
+    top: 350%;
     left: 53.7%;
     position: absolute;
 }
@@ -763,65 +765,88 @@ animation: animate 4s linear infinite;
 .slidercard {
     background-color: #fff;
     width: 300px;
-    height: 80%;
+    height: 400px;
     border-radius: 20px;
-    border: 2px solid #579BB1;
+    border: 2px solid #36454F;
+    cursor: pointer;
+    display: flex;
+}
+
+.slidercard h2 {
+    padding: 20px;
+    color: #0d0d0d;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.slidercard img {
+    width: 295px;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    align-content: center;
+    object-fit: contain;
+}
+
+.slidercard:hover {
+    box-shadow: 0 2px 5px #000000;
 }
 
 .contact {
-    height: max-content;
+    height:  max-content;
 }
 
 .cc1 {
-    top: 435%;
+    top: 450%;
     left: 38.5%;
     position: absolute;
 }
 
 .co {
-    top: 435%;
+    top: 450%;
     left: 41.3%;
     position: absolute;
 }
 
 .cn {
-    top: 435%;
+    top: 450%;
     left: 43.9%;
     position: absolute;
 }
 
 .ct1 {
-    top: 435%;
+    top: 450%;
     left: 46.5%;
     position: absolute;
 }
 
 .ca {
-    top: 435%;
+    top: 450%;
     left: 48%;
     position: absolute;
 }
 
 .cc2 {
-    top: 435%;
+    top: 450%;
     left: 50.7%;
     position: absolute;
 }
 
 .ct2 {
-    top: 435%;
+    top: 450%;
     left: 53%;
     position: absolute;
 }
 
 .cm {
-    top: 435%;
+    top: 450%;
     left: 56.5%;
     position: absolute;
 }
 
 .ce {
-    top: 435%;
+    top: 450%;
     left: 60%;
     position: absolute;
 }
